Fixing schedule table track info on mobile

--- a/sass/05-templates/_09-schedule.scss
+++ b/sass/05-templates/_09-schedule.scss
@@ -101,12 +101,6 @@
 					height: inherit;
 					vertical-align: top;
 					&.wcb-track-track-1.wcb-track-track-2{
-						font-weight: 700;
-						font-size: .875rem;
-						color: $color__primary;
-						padding: .25rem .5rem;
-						background-color: $color__tertiary;
-						border: none !important;
 						@media (min-width: 700px){
 							text-align: center;
 						}
@@ -114,7 +108,15 @@
 					.wcb-session-cell-content{
 						@media (min-width: 700px){
 							padding-right: 2rem;
-							&:before{
+						}
+						&:before{
+							font-weight: 700;
+							font-size: .875rem;
+							color: $color__primary;
+							padding: .25rem .5rem;
+							background-color: $color__tertiary;
+							border: none !important;
+							@media (min-width: 700px){
 								display: none;
 							}
 						}
